editing font for forms

--- a/ghi/app/src/MainPage.css
+++ b/ghi/app/src/MainPage.css
@@ -2,7 +2,7 @@
 @import "https://unpkg.com/open-props/normalize.min.css";
 
 body{
-    font-family: 'Castoro Titling', cursive;
+    font-family: 'Lora', serif;
     color: black;
 }
 /* header info */
