Updated Service History and Appointments to show a green check mark and a red x to denote VIP status.

--- a/ghi/app/src/MainPage.css
+++ b/ghi/app/src/MainPage.css
@@ -32,6 +32,7 @@ body{
 
 /* reviews */
 .scrollport {
+    mask-image: linear-gradient(to right, #19191900, #000, #000, );
     -webkit-mask-image: linear-gradient(to right, #19191900, #000, #000, );
     overflow-x: auto;
     overscroll-behavior-x: contain;
